--- a/TopNotify/src-vite/package.json
+++ b/TopNotify/src-vite/package.json
@@ -15,8 +15,12 @@
     "@emotion/styled": "^11.11.5",
     "eslint-plugin-react": "^7.37.5",
     "framer-motion": "^11.1.7",
+    "i18next": "^25.7.1",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^16.4.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
