feat(i18n): Add C# resource files for backend

--- a/TopNotify/TopNotify.csproj
+++ b/TopNotify/TopNotify.csproj
@@ -63,6 +63,19 @@
     <None Remove="MSIX\**" />
   </ItemGroup>
 
+  <!-- Localization Resources -->
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\Strings.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <Compile Update="Resources\Strings.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Strings.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="KdSoft.MailSlot" Version="1.1.0" />
     <PackageReference Include="KdSoft.MailSlotListener" Version="1.0.4" />
